ensure correct gap in form title+description

--- a/components/src/paywall/components/form.css
+++ b/components/src/paywall/components/form.css
@@ -5,6 +5,12 @@
   overflow: hidden;
 }
 
+.top {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
 form {
   display: flex;
   flex-direction: column;
